--- a/src/main/resources/static/css/main_user.css
+++ b/src/main/resources/static/css/main_user.css
@@ -38,7 +38,6 @@
 .center {
     width: 50%; /* set the width of the div to 50% of the page */
     margin: 25px auto auto;
-    color: aliceblue;
     text-align: center;
 }
 
@@ -46,4 +45,11 @@
     display: flex;
     justify-content: center;
 }
+
+.table-center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 
