--- a/src/main/resources/templates/user/main_user.html
+++ b/src/main/resources/templates/user/main_user.html
@@ -17,7 +17,7 @@
     <div class="container">
         <a th:href="@{/}" class="navbar-brand font-weight-bold p1">Klub Lekkoatletyczny</a>
         <div>
-            <a th:href="@{/nasze_zawody}" class="btn btn-primary btn-sm">Nasze zawody</a>
+            <a th:href="@{/nasze_zawody}" class="btn btn-dark btn-sm">Nasze zawody</a>
             <a th:href="@{/trenerzy}" class="btn btn-dark btn-sm">Trenerzy i sekcje</a>
             <a th:href="@{/zawodnicy}" class="btn btn-dark btn-sm">Zawodnicy</a>
         </div>
