-error pages fixed

--- a/src/main/resources/templates/errors/504.html
+++ b/src/main/resources/templates/errors/504.html
@@ -26,7 +26,7 @@
                     <div><b><p style="font-size:30px">Przepraszamy! Coś poszło nie tak :(</p></b></div>
                     <div><p style="font-size:24px">504 – Gateway Timeout</p></div>
                 </div>
-                <button class="btn btn-outline-primary" type="submit" value="Sign In">Powrót do strony głównej</button>
+                <a th:href= "@{/index}" class="btn btn-outline-primary" type="submit" >Powrót do strony głównej</a>
             </form>
         </div>
     </div>
