--- a/src/main/resources/templates/user/trenerzy.html
+++ b/src/main/resources/templates/user/trenerzy.html
@@ -70,6 +70,8 @@
             </tr>
             </tbody>
         </table>
+        <button class="btn btn-outline-info center" onclick="showHideAddButton()"> Dodaj </button>
+
     </div>
 </div>
 
@@ -97,6 +99,6 @@
 <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
 <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
 <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-<script th:src="@{static/script.js}"></script>
+<script th:src="@{/js/script.js}"></script>
 </body>
 </html>
