--- a/src/main/resources/static/css/main_user.css
+++ b/src/main/resources/static/css/main_user.css
@@ -112,13 +112,7 @@
     opacity: 0.8;
 }
 
-/* Add a red background color to the cancel button */
-.form-container .cancel {
-    background-color: red;
-}
-
-/* Add some hover effects to buttons */
-.form-container .btn:hover, .open-button:hover {
-    opacity: 1;
+.editRow{
+    display: none;
 }
 
