--- a/src/main/resources/templates/admin/zawodnicy.html
+++ b/src/main/resources/templates/admin/zawodnicy.html
@@ -81,6 +81,7 @@
       </tr>
       </tbody>
     </table>
+    <button class="btn btn-outline-info center" onclick="showHideAddButton()"> Dodaj </button>
   </div>
 
 </div>
@@ -109,5 +110,7 @@
 <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
 <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
 <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+<script th:src="@{/js/script.js}"></script>
+
 </body>
 </html>
