--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -33,8 +33,8 @@
                         <div th:if="${param.error}" style="color:red; margin-bottom:15px; font-optical-sizing: auto">
                             <strong>Nieprawidłowy login lub hasło!</strong>
                         </div>
-
-                        <button class="btn btn-success" type="submit" value="Sign In">Login</button>
+                        <button class="btn btn-success btn-lg" type="submit" value="Sign In">Login</button>
+                        <a th:href= "@{/index}" class="btn btn-outline-danger btn-lg" type="submit">Anuluj</a>
                     </form>
 
                 </div>
@@ -47,6 +47,7 @@
 <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
 <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
 <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+<script th:src="@{/js/script.js}"></script>
 
 </body>
 </html>
