--- a/src/main/resources/templates/user/nasze_zawody.html
+++ b/src/main/resources/templates/user/nasze_zawody.html
@@ -75,12 +75,13 @@
                     <a th:href="@{'/delete_zawody/' + ${zawody.nr_zawodow}}" class="btn btn-outline-danger" onclick="deleteConfirmation()">Usuń</a>
                 </td>
             </tr>
+
             </tbody>
         </table>
+        <button class="btn btn-outline-info center" onclick="showHideRow()"> Dodaj </button>
     </div>
 
 </div>
-
 
 
 <!-- footstop -->
@@ -106,6 +107,6 @@
 <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
 <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
 <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-<script th:src="@{/static/script}"></script>
+<script th:src="@{/js/script.js}"></script>
 </body>
 </html>
