--- a/src/main/resources/templates/user/trenerzy.html
+++ b/src/main/resources/templates/user/trenerzy.html
@@ -55,7 +55,7 @@
             </thead>
             <tbody>
             <tr th:each="trener: ${trenerzy}">
-                <td th:text="${trener.nr_pracownika}"></td>
+                <td th:text="${trener.nrPracownika}"></td>
                 <td th:text="${trener.imie}"></td>
                 <td th:text="${trener.nazwisko}"></td>
                 <td th:text="${trener.dyscyplina}"></td>
@@ -65,12 +65,51 @@
                 <td th:text="${trener.stopienZaawansowania}"></td>
                 <td>
                     <a class="btn btn-outline-info">Edytuj</a>
-                    <a th:href="@{'/delete_trenerzy/' + ${trener.nr_pracownika}}" class="btn btn-outline-danger" onclick="deleteConfirmation()">Usuń</a>
+                    <a th:href="@{'/delete_trenerzy/' + ${trener.nrPracownika}}" class="btn btn-outline-danger" onclick="deleteConfirmation()">Usuń</a>
                 </td>
             </tr>
+            <form action="#" th:action="@{/addZawody}" th:object="${zawody}" method="post">
+                <tr id="myForm" style="display:none">
+                    <td>
+                        <label for="id_trenera"></label>
+                        <input id="id_trenera" type="text"   autocomplete="on" class="form-control-sm" required>
+                    </td>
+                    <td>
+                        <label for="Imie"></label>
+                        <input type="text" id="Imie" autocomplete="on" class="form-control-sm" required>
+                    </td>
+                    <td>
+                        <label for="Nazwisko"></label>
+                        <input type="text" id="Nazwisko"  autocomplete="on" class="form-control-sm" required>
+                    </td>
+                    <td>
+                        <label for="Dyscyplina"></label>
+                        <input type="text" id="Dyscyplina" autocomplete="on" class="form-control-sm" required>
+                    </td>
+                    <td>
+                        <label for="E-mail"></label>
+                        <input type="text" id="E-mail" autocomplete="on" class="form-control-sm" required>
+                    </td>
+                    <td>
+                        <label for="Telefon"></label>
+                        <input type="text" id="Telefon" autocomplete="on" class="form-control-sm" required>
+                    </td>
+                    <td>
+                        <label for="nr_klubu"></label>
+                        <input type="text" id="nr_klubu" autocomplete="on" class="form-control-sm" required>
+                    </td>
+                    <td>
+                        <label for="stopien_zaawansowania"></label>
+                        <input type="text" id="stopien_zaawansowania" autocomplete="on" class="form-control-sm" required>
+                    </td>
+                    <td>
+                        <button class="btn btn-outline-success" type="submit"> Zapisz </button>
+                    </td>
+                </tr>
+            </form>
             </tbody>
         </table>
-        <button class="btn btn-outline-info center" onclick="showHideAddButton()"> Dodaj </button>
+        <button class="btn btn-outline-info center" onclick="showHideRow()"> Dodaj </button>
 
     </div>
 </div>
